# software-engineering-as-code

./: Cargo.toml  README.md  markup.swup  pyproject.toml
.github/workflows/: documentation.yml  rust.yml
docs/: book.toml
docs/src/: ch01_introduction.md
frontend/: pnpm-lock.yaml  vite.config.js
src/: lib.rs  main.rs
src/swac/backend/: api_v1.py  server.py
src/swac/backend/.frontend/: index.html
src/swac/cli/: arg_types.py  cli.py  commands.py  ui.py
