[tool.poetry]
name = "swac"
version = "0.1.0"
description = ""
authors = ["Andi Hellmund <am.hellmund@gmail.com>"]
readme = "README.md"
packages = [{include = "swac", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.0"
typed-argparse = "^0.3.1"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"


[tool.poetry.scripts]
swac = "swac.cli.ui:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
